# gatekeeper

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  deploy.sh  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/workflows/: build.yml  docker-ci.yml  gatekeeper.yml
alembic/: env.py
alembic/versions/: 22501e4b6ecc_initial.py  589101ada78c_alter_game_table_name_to_product.py  5bc9cbd2106b_initial.py
docker/uv/: Dockerfile
docker/uv/scripts/: entrypoint.sh
src/gatekeeper/: __init__.py  __main__.py  config.py  database.py  logger.py  logging.py  main.py  runtime.py
src/gatekeeper/agents/: auth_agent.py  captcha_agent.py  claim_agent.py  discovery_agent.py  epic_games_agent.py  hcaptcha_agent.py  session_agent.py
src/gatekeeper/contexts/: browser_context.py  hcaptcha_context.py
src/gatekeeper/decorators/: retry_decorator.py  retry_if_needed_decorator.py
src/gatekeeper/enums/: product_path_type.py  product_type.py
src/gatekeeper/events/: auth_events.py  claim_events.py  session_events.py
src/gatekeeper/factories/: auth_url_factory.py  store_url_factory.py
src/gatekeeper/factories/browser/: browser_factory.py
src/gatekeeper/jobs/: base_job.py  claim_job.py
src/gatekeeper/mappers/: product_mapper.py
src/gatekeeper/models/: game.py  product.py
src/gatekeeper/repositories/: game_repository.py  product_repository.py
src/gatekeeper/schedulers/: claim_scheduler.py
src/gatekeeper/schedules/: claim_games_task.py
src/gatekeeper/schemas/: product_claim_summary_schema.py  product_schema.py
src/gatekeeper/services/: claim_service.py  discovery_service.py  session_service.py  telegram_service.py
src/gatekeeper/utils/: captcha_utils.py  epic_games_utils.py  file_utils.py  playwright_snapshot_utils.py  playwright_utils.py
src/rataria_epic_games/: config.py  get_games.py  main.py
src/rataria_epic_games/agents/: epic_games_agent.py
(+2 files in other folders)
