[project]
name = "gatekeeper"
version = "1.1.4"
description = "Projeto que automatiza o resgate de jogos gratuitos da Epic Games, rodando periodicamente para que você não precise fazer isso manualmente toda semana."
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "nayetdet", email = "jpmoreiracampos21@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "aiosqlite>=0.22.0",
    "alembic>=1.17.2",
    "apscheduler>=3.11.0",
    "camoufox>=0.4.11",
    "hcaptcha-challenger>=0.19.0",
    "loguru>=0.7.3",
    "playwright>=1.55.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.31",
    "tenacity>=9.1.2",
]

[tool.uv]
package = true
