[project]
name = "gatekeeper"
version = "1.2.0"
description = "Projeto que automatiza o resgate de jogos gratuitos da Epic Games, rodando periodicamente para que você não precise fazer isso manualmente toda semana."
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "nayetdet", email = "jpmoreiracampos21@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "camoufox>=0.4.11",
    "hcaptcha-challenger>=0.19.0",
    "loguru>=0.7.3",
    "playwright>=1.59.0,<1.60.0",
    "pydantic>=2.13.3",
    "sqlmodel>=0.0.38",
    "telebot>=0.0.5",
    "tenacity>=9.1.4",
]

[tool.uv]
package = true
